--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -26,7 +26,7 @@ Jumbotron
 	padding: 0;
 }
 .jumbotron {
-    background: linear-gradient(rgba(0,0,0, 0.18), rgba(0,0,0, 0)), url(../images/furniture.jpeg);
+    background: linear-gradient(rgba(0,0,0, 0.18), rgba(0,0,0, 0)), url(../images/heroFurniture.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 700px;
@@ -39,7 +39,7 @@ Jumbotron
 }
 .jumbotron h1 {
 	color: #fff;
-	font-size: 4.4em;
+	font-size: 4em;
 	font-family: 'Open Sans','Roboto', sans-serif, helvetica;
 	font-weight: 400;
 }
@@ -55,7 +55,7 @@ Jumbotron
 }
 .jumbotron header p.header-phone  {
 	display: block;
-	max-width: 20%;
+	width: 20%;
 	margin: auto;
 	background-color: rgba(127,20,28,1);
 	margin-top: 50px;
@@ -145,9 +145,9 @@ About
 	background-color: #f9fbfb;
 }
 .about p {
-	max-width: 85%;
+	max-width: 90%;
 	margin: auto;
-	font-size: 1.125em;
+	font-size: 1.2em;
 	text-align: center;
 	font-weight: 400;
 }
@@ -210,23 +210,23 @@ Contacts
 	padding: 0;
 }
 .contacts-card {
-	border-left: 1px solid rgba(127,20,28,1);
+	border-left: 3px solid rgba(127,20,28,1);
 	min-height: 200px;
     max-width: 100%;
     background-color: #ffffff;
     padding: 30px 20px;
 	 z-index: 1000;
-	 box-shadow: 0 0 1px rgba(0,0,0,0.3);
+	 box-shadow: 0 0 1px rgba(0,0,0,0.4);
 	 border-radius: 1px;
 }
 /**********************
-Services
+Services-Test
 ***********************/
 
 .property-sales-image, .property-letting-image {
 	width: 50%;
 	height: 450px;
-	background: url(../images/office.jpeg);
+	background: url(../images/office1.jpeg);
 	background-position: 35% 100%;
 	height: 450px;
 	background-size: cover;
@@ -243,6 +243,7 @@ Services
 	height: 450px;
 	background: url(../images/joy.jpg);
 	background-size: cover;
+	background-position: 65% 100%;
 	float: left;
 	clear: left;
 }
@@ -250,7 +251,7 @@ Services
 	margin-top: 20px;
 }
 .property-sales-text {
-	background-color: rgba(127,20,28,1);
+	background-color: #951721;
 	color: #ffffff;
 	min-height: 450px;
 	width: 50%;
@@ -262,14 +263,98 @@ Services
 	line-height: 1.8;
 	margin-top: 20px;
 }
+/**********************
+Media Queries
+***********************/
+@media only screen and (max-width: 992px) {
+    .services-column1, .contacts-card {
+        margin-bottom: 20px;
+    }
+}
+@media only screen and (max-width: 768px) {
+	.jumbotron {
+		background-position: 70% 100%;
+	}
+	.about p {
+		max-width: 100%;
+		font-size: 1.1em;
+	}
+	.jumbotron h1 {
+		font-size: 3.4em;
+	}
+	.jumbotron p {
+		font-size: 1.18em;
+	}
+}
+@media only screen and (max-width: 580px) {
+	.jumbotron p {
+		max-width: 95%;
+	}
+}
+@media only screen and (max-width: 333px) {
+	.jumbotron h1 {
+		font-size: 3em;
+	}
+}
+@media only screen and (max-width: 580px) {
+	.property-sales-image, .property-letting-image {
+	width: 100%;
+	height: 300px;
+	background-position: 35% 100%;
+	background-size: cover;
+}
+.property-management-image {
+	width: 100%;
+	height: 300px;
+	background: url(../images/joy.jpg);
+	background-size: cover;
+	background-position: 65% 100%;
 
-
-
-
-
-
-
-
+}
+.property-sales-text {
+	background-color: #951721;
+	color: #ffffff;
+	min-height: 300px;
+	width: 100%;
+	float: left;
+	padding: 10px
+}
+.property-sales-text p {
+	font-size: 1.1em;
+	line-height: 1.8;
+	margin-top: 20px;
+}
+}
+/**********************
+Jumbotron Phone Number
+***********************/
+@media only screen and (max-width: 1160px) {
+    .jumbotron header p.header-phone  {
+        width: 30%
+    }
+}
+@media only screen and (max-width: 774px) {
+	 .jumbotron header p.header-phone  {
+        width: 40%;
+        font-size: 1.5em;
+    }
+}
+@media only screen and (max-width: 580px) {
+	 .jumbotron header p.header-phone  {
+        width: 54%
+    }
+    .jumbotron {
+		background-position: 50% 100%;
+	}
+}
+@media only screen and (max-width: 387px) {
+	 .jumbotron header p.header-phone  {
+        width: 75%
+    }
+}
+/*************************
+Jumbotron Phone Number End
+**************************/
 
 
 
